--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -1,5 +1,15 @@
 @charset "utf-8";
 
+
+
+@import "mixin";
+@import "variables";
+@import "nav";
+@import "about";
+@import "map";
+@import "contact-us";
+@import "footer";
+
 // Place your Sass imports here...
 
 
