--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -1,9 +1,9 @@
 @charset "utf-8";
-
-
-
-@import "mixin";
+@import "reset";
 @import "variables";
+@import "mixin";
+@import "body";
+@import "header";
 @import "nav";
 @import "about";
 @import "map";
