--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -9,7 +9,8 @@
 @import "map";
 @import "contact-us";
 @import "footer";
-
+@import "customized";
+@import "product-advisor";
 // Place your Sass imports here...
 
 
