--- a/dev/scss/_about.scss
+++ b/dev/scss/_about.scss
@@ -1,3 +1,46 @@
-.about a {
-    @include list-style;
+.about {
+
+    color: white;
+    text-align: center;
+    .about-bg {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-image: url("/dev/images/bg-section-about-us.jpg");
+        background-color: lightblue;    
+        min-height: 570px;
+        max-width: 100vw;
+    }
+
+    h2 {
+        transform: translateY(100%);
+        font-size: 2rem;
+        font-weight: 700;
+        text-transform: uppercase;
+    }
+
+    p {
+        transform: translateY(140%);
+        font-size: 1rem;
+        font-weight: 400;
+        max-width: 200px;
+    }
+
+    a {
+        @include list-style;
+        color: white;
+        text-transform: uppercase;
+        transform: translateY(490%);
+        border: solid white 1px;
+        padding: 0.8rem 1.8rem;
+    }
+
+    .video {
+        background-color: rgba(0,157,220,255);
+        padding: 3rem 0;
+    }
+
+    .video video {
+        border: solid 12px rgba(21,74,102,255);
+    }
 }
