--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -1,3 +1,5 @@
+/** @format */
+
 @charset "utf-8";
 @import "reset";
 @import "variables";
@@ -11,7 +13,5 @@
 @import "footer";
 @import "customized";
 @import "product-advisor";
-// Place your Sass imports here...
-
-
-
+@import "location-contact";
+@import "newsletter"; // Place your Sass imports here...
