--- a/dev/scss/_about.scss
+++ b/dev/scss/_about.scss
@@ -1,13 +1,14 @@
-.about {
+/** @format */
 
+.about {
     color: white;
     text-align: center;
     .about-bg {
         display: flex;
         flex-direction: column;
         align-items: center;
-        background-image: url("/dev/images/bg-section-about-us.jpg");
-        background-color: lightblue;    
+        background-image: url("/images/bg-section-about-us.jpg");
+        background-color: lightblue;
         min-height: 570px;
         max-width: 100vw;
     }
@@ -36,11 +37,11 @@
     }
 
     .video {
-        background-color: rgba(0,157,220,255);
+        background-color: rgba(0, 157, 220, 255);
         padding: 3rem 0;
     }
 
     .video video {
-        border: solid 12px rgba(21,74,102,255);
+        border: solid 12px rgba(21, 74, 102, 255);
     }
 }
