--- a/dev/scss/_product-advisor.scss
+++ b/dev/scss/_product-advisor.scss
@@ -1,7 +1,7 @@
 .product-advisor {
 
     background-color: rgb(8,66,94);
-    padding-bottom: 4rem;
+    padding: 0 1rem 4rem 1rem;
     
 
     
@@ -56,4 +56,211 @@
         border: none;
         margin-top: 1rem;
     }
+}
+
+@media (min-width: $breakpoint-tablet) {
+
+    .product-advisor {
+
+        hr {
+            min-width: 96.5vw;
+        }
+
+        .form-flex {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: repeat(4, 1fr);
+
+
+            input {
+                grid-column: 1 / span 3;
+                grid-row: 4/5;
+                max-height: 50px;
+                font-size: 1.1rem;
+            }
+
+            .select-1 {
+                grid-column: 1/2;
+                grid-row: 1/2;
+                margin-top: 2rem;
+                margin-bottom: 1rem;
+                margin-right: 0.5rem;
+            }
+
+            .label-1 {
+                grid-column: 1/2;
+                grid-row: 1/2;
+            }
+
+            .select-2 {
+                grid-column: 2/3;
+                grid-row: 1/2;
+                margin-top: 2rem;
+                margin-bottom: 1rem;
+                margin-left: 0.5rem;
+            }
+
+            .label-2 {
+                grid-column: 2/3;
+                grid-row: 1/2;
+                margin-left: 0.5rem;
+            }
+
+            .select-3 {
+                grid-column: 1/2;
+                grid-row: 2/3;
+                margin-top: 2rem;
+                margin-bottom: 1rem;
+                margin-right: 0.5rem;
+            }
+
+            .label-3 {
+                grid-column: 1/2;
+                grid-row: 2/3;
+            }
+
+            .select-4 {
+                grid-column: 2/3;
+                grid-row: 2/3;
+                margin-top: 2rem;
+                margin-bottom: 1rem;
+                margin-left: 0.5rem;
+            }
+
+            .label-4 {
+                grid-column: 2/3;
+                grid-row: 2/3;
+                margin-left: 0.5rem;
+            }
+
+            .select-5 {
+                grid-column: 1/2;
+                grid-row: 3/4;
+                margin-top: 2rem;
+                margin-bottom: 1rem;
+                margin-right: 0.5rem;
+            }
+
+            .label-5 {
+                grid-column: 1/2;
+                grid-row: 3/4;
+            }
+
+        }
+
+
+        p {
+            color: rgb(55, 165, 224);
+            font-weight: 400;
+        }
+    }
+
+}
+
+
+@media (min-width: 105.625em) {
+
+    .product-advisor {
+        padding: 0 1rem;
+
+        select {
+            min-width: 320px;
+            max-width: 400px;
+        }
+
+        hr {
+            min-width: 95.5vw;
+        }
+
+        .form-flex {
+            display: grid;
+            justify-items: center;
+            grid-template-columns: repeat(5, 1fr);
+            grid-template-rows: 1fr 1fr;
+            position: relative;
+            max-width:100vw;
+        
+          
+
+            .select-1 {
+                grid-column: 1/2;
+                grid-row: 1/2;
+                margin-top: 1.5rem;
+                margin-bottom: 2rem;
+                margin-right: 0.5rem;
+                
+            }
+
+            
+
+            .select-2 {
+                grid-column: 2/3;
+                grid-row: 1/2;
+                margin: 1.5rem 0.5rem 2rem 0.5rem;
+            }
+
+            .label-2 {
+                grid-column: 2/3;
+                grid-row: 1/2;
+            }
+
+        
+            .select-3 {
+                grid-column: 3/4;
+                grid-row: 1/2;
+                margin: 1.5rem 0.5rem 2rem 0.5rem;
+                
+            }
+
+            .label-3 {
+                grid-column: 3/4;
+                grid-row: 1/2;
+            }
+
+            .select-4 {
+                grid-column: 4/5;
+                grid-row: 1/2;
+                margin: 1.5rem 0.5rem 2rem 0.5rem;
+            }
+
+            .label-4 {
+                grid-column: 4/5;
+                grid-row: 1/2;
+            }
+
+            .select-5 {
+                grid-column: 5/6;
+                grid-row: 1/2;
+                margin: 1.5rem 0.5rem 2rem 0.5rem;
+            }
+
+            .label-5 {
+                grid-column: 5/6;
+                grid-row: 1/2;
+            }
+
+            input {
+                grid-column: 1 / span 7;
+                grid-row: 2/3;
+                margin-bottom: 1rem;
+                margin-top: 0;
+                min-width: 97.7%;
+                position: absolute;
+            }
+        }
+
+        // .form-flex {
+        //     display: flex;
+        //     flex-direction: row;
+        //     flex-wrap: wrap;
+
+
+        //     .select-1 {
+        //         width: 100%;
+        //         max-width: 50px;
+        //     }
+        // }
+
+    }
+
 }
