--- a/dev/scss/_about.scss
+++ b/dev/scss/_about.scss
@@ -35,15 +35,51 @@
         border: solid white 1px;
         padding: 0.8rem 1.8rem;
     }
-
     .video {
+
         background-color: rgba(0,157,220,255);
-        padding: 3rem 0;
+
+
+    
+        .div-container{
+
+            position: relative;
+            width: 100%;
+            overflow: hidden;
+            padding-top: 56.25%;
+            margin-left: 25%;
+            border: solid 15px rgba(21, 74, 102, 255);
+            background-color: green;
+            width: 300px;
+            height: 200px;
+
+            iframe {
+                position: absolute;
+                top: 0;
+                left: 0;
+                bottom: 0;
+                right: 0;
+                width: 100%;
+                height: 100%;
+                border: none;
+            }
+
+        }
     }
 
-    .video video {
-        border: solid 12px rgba(21,74,102,255);
-    }
+    
+
+    // .video {
+    //     background-color: rgba(0,157,220,255);
+    //     // padding: 3rem;
+    //     padding-bottom: 8rem;
+    // }
+
+    // .video iframe {
+    //     border: solid 15px rgba(21, 74, 102, 255);
+    //     background-color: green;
+    //     transform: translate(0%, 36%);
+    // }
 }
 
 @media (min-width: $breakpoint-tablet) {
@@ -66,6 +102,15 @@
             max-width: 500px;
             line-height: 1.2;
         }
+
+
+        // .video iframe {
+        //     border: solid 15px rgba(21, 74, 102, 255);
+        //     background-color: green;
+        //     transform: translate(0%, 20%);
+        //     width: 500px;
+        //     height: 304.5px;
+        // }
 
 
     }
