--- a/dev/scss/_product-advisor.scss
+++ b/dev/scss/_product-advisor.scss
@@ -1,6 +1,6 @@
 .product-advisor {
 
-    background-color: rgb(8,66,94);
+    background-color: #154a66;
     padding: 0 1rem 4rem 1rem;
     
 
@@ -42,8 +42,27 @@
         min-height: 40px;
         background-color: lightgrey;
         margin-bottom: 1.5rem;
+        background-image: url(/images/arrow-point-down.png);
+
+        background-repeat: no-repeat;
+        background-position-x: 99.6%;
+        background-position-y: 12px;
+
     }
 
+    select {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        text-indent: 1px;
+        text-overflow: '';
+    }
+
+    // .rotate {
+    //     transform: rotate(180deg);
+    // }
+
+
+    
     select option {
         font-weight: 700;
     }
@@ -62,8 +81,29 @@
 
     .product-advisor {
 
+        select {
+            // min-width: 300px;
+            // min-height: 40px;
+            // background-color: lightgrey;
+            // margin-bottom: 1.5rem;
+            background-image: url(/images/down-arrow-blue.png);
+            background-repeat: no-repeat;
+            background-position-x: 99.6%;
+            background-position-y: 12px;
+
+           
+        }
+
+        select {
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            text-indent: 1px;
+            text-overflow: '';
+        }
+    
+
         hr {
-            min-width: 96.5vw;
+            min-width: 100%;
         }
 
         .form-flex {
@@ -161,15 +201,17 @@
 @media (min-width: 105.625em) {
 
     .product-advisor {
-        padding: 0 1rem;
+        padding: 0 2rem;
+        // width: 100%;
 
         select {
-            min-width: 320px;
-            max-width: 400px;
+            min-width: 310px;
+            max-width: 310px;
+            width: 100%;
         }
 
         hr {
-            min-width: 95.5vw;
+            min-width: 100%;
         }
 
         .form-flex {
@@ -178,7 +220,7 @@
             grid-template-columns: repeat(5, 1fr);
             grid-template-rows: 1fr 1fr;
             position: relative;
-            max-width:100vw;
+            // width: 100%;
         
           
 
@@ -244,7 +286,8 @@
                 grid-row: 2/3;
                 margin-bottom: 1rem;
                 margin-top: 0;
-                min-width: 97.7%;
+                width: 100%;
+                // min-width: 97.7%;
                 position: absolute;
             }
         }
