--- a/dev/scss/_customized.scss
+++ b/dev/scss/_customized.scss
@@ -10,6 +10,10 @@
     .fig-flex {
         // position: absolute;
     }
+
+    a {
+        display: none;
+    }
     
     h2 {
         text-align: center;
@@ -116,11 +120,28 @@
     .fig-4 img {
         max-width: 58vw;
     }
+
+    .wave-blue {
+        transform: translateY(3px);
+    }
     
     @media screen and (min-width: $breakpoint-mobile) {
 
         h2 {
             color: rgba(21,74,102,255);
+        }
+
+        a {
+            color: rgb(77, 81, 85);
+            text-decoration:underline;
+            font-weight: 500;
+            align-items: center;
+            padding-top: 1rem;
+            display: block;
+        }
+
+        .fig-1-a {
+            padding-top: 2.1rem;
         }
 
         .wave-blue {
@@ -131,8 +152,12 @@
             display: flex;
             flex-direction: row;
             flex-wrap:nowrap;
-            align-items:flex-start;
+            align-items:baseline;
+            justify-content: space-evenly;
+
+            
         }
+
 
         figcaption {
             // float:bottom;
@@ -141,17 +166,25 @@
             font-size: 1.2rem;
             text-align: center;
             color: rgba(0,157,220,255);
-            padding-top: 0rem;
+            padding: 1.2rem 0 0 0;
+            margin-top: 1rem;
+            display: flex;
+            justify-content: flex-end;
 
         }
 
         .fig-1 {
             border: none;
             padding-bottom: 2rem;
+            display: flex;
+            flex-direction: column;
+            // align-items: flex-end;
+            align-items: center;
         }
 
         .fig-1 img {
             max-width: 15vw;
+            padding-bottom: 1rem;
         }
 
         .fig-1 figcaption {
@@ -160,7 +193,11 @@
 
         .fig-2 {
             border: none;
-            padding-left: 2rem;
+            // padding-left: 2rem;
+            display: flex;
+            flex-direction: column;
+            // align-items: flex-end;
+            align-items: center;
         }
 
         .fig-2 figcaption {
@@ -170,11 +207,16 @@
 
         .fig-2 img {
             max-width: 15vw;
+            padding-bottom: 1rem;
         }
 
         .fig-3 {
             border: none;
-            padding: 0.5rem 1rem 1rem 0;
+            // padding: 0.5rem 1rem 1rem 0;
+            display: flex;
+            flex-direction: column;
+            // align-items: flex-end;
+            align-items: center;
         }
 
         .fig-3 figcaption {
@@ -183,11 +225,16 @@
 
         .fig-3 img {
             max-width: 15vw;
+            padding-bottom: 1rem;
         }
 
         .fig-4 {
             border: none;
-            padding-left: 3rem;
+            // padding-left: 3rem;
+            display: flex;
+            flex-direction: column;
+            // align-items: flex-end;
+            align-items: center;
         }
 
         .fig-4 figcaption {
@@ -197,6 +244,7 @@
 
         .fig-4 img {
             max-width: 15vw;
+            padding-bottom: 1rem;
         }
     }
   
@@ -223,5 +271,15 @@
 
         }
         
+    }
+
+
+    @media (min-width: $breakpoint-desktop){
+        .customized {
+            p {
+                padding: 0 17rem;
+                // padding: 0 50%;
+            }
+        }
     }
 
