--- a/dev/scss/_footer.scss
+++ b/dev/scss/_footer.scss
@@ -4,24 +4,116 @@
 //     @include list-style;
 
 // }
+.relative {
+    position: relative;
+}
 
 .wave-sky-blue {
     width: 100vw;
+    padding: 0;
+    margin: 0;
+    transform: translateY(4px);
+    //i cheated!!^^
+}
+
+.logo {
+    width: 150px;
     display: block;
+}
+svg {
+    fill: white;
+    margin: 0 0.3rem;
+    align-items: center;
+    justify-content: center;
+    vertical-align: middle;
 }
 
 footer {
-    position: absolute;
-
+    padding: 0;
+    margin: 0;
+    position: relative;
     background-color: #244a64;
-    // .wave-sky-blue {
-    //     position: absolute;
-    //     top: 0;
-    //     left: 0;
-    //     max-width: 100%;
-    // }
-    .logo {
-        width: 100px;
-        z-index: 2;
+}
+.blue {
+    text-transform: uppercase;
+    font-family: "Roboto Condensed", sans-serif;
+    padding: 0;
+    margin: 0;
+    height: 200px;
+    background-color: #429bd6;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: nowrap;
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+.flex-row {
+    align-items: center;
+    text-align: center;
+}
+p {
+    padding: 1rem;
+    display: block;
+    text-align: center;
+    vertical-align: baseline;
+}
+
+@media (min-width: $breakpoint-tablet) {
+    .blue {
+        flex-direction: row;
     }
 }
+@media (min-width: $breakpoint-desktop) {
+    .flex-container {
+        display: flex;
+        flex-direction: row;
+    }
+}
+// .blue {
+//     flex-direction: row;
+// }
+// .flex-container {
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: center;
+//     text-align: center;
+//     align-items: center;
+//     // display: inline-flex;
+// }
+// .flex-column {
+//     display: flex;
+//     flex-direction: row;
+//     gap: 2rem;
+//     justify-content: center;
+//     text-align: center;
+//     align-items: center;
+// }
+// .flex-row {
+//     align-items: center;
+// }
+
+// footer {
+//     position: absolute;
+
+//     background-color: #244a64;
+//     // .wave-sky-blue {
+//     //     position: absolute;
+//     //     top: 0;
+//     //     left: 0;
+//     //     max-width: 100%;
+//     // }
+//     .logo {
+//         width: 100px;
+//         z-index: 2;
+//     }
+// }
