--- a/dev/scss/_location-contact.scss
+++ b/dev/scss/_location-contact.scss
@@ -14,7 +14,7 @@
         order: -2;
         img {
             width: 100%;
-            height: auto;
+            height: 100%;
         }
         .map-txt {
             color: #504f4f;
@@ -59,6 +59,9 @@
             }
         }
     }
+
+    
+
     @media (min-width: $breakpoint-tablet) {
         display: grid;
         grid-template-rows: none;
@@ -82,6 +85,16 @@
                     background-color: #429bd6;
                 }
             }
+        }
+    }
+
+    @media (min-width: $breakpoint-desktop) {
+
+        .wave-blue-light {
+
+            display: flex;
+            position: absolute;
+            top: 0;
         }
     }
 }
