added mixins and variables

--- a/dev/scss/_variables.scss
+++ b/dev/scss/_variables.scss
@@ -7,3 +7,14 @@ $breakpoint-mobile: 640px;
 $breakpoint-tablet: 768px;
 $breakpoint-desktop: 1024px;
 $breakpoint-desktop-large: 1600px;
+
+
+$colors: (
+    text-color: white,
+    primary-color: #009ddc,
+    secondary-color: #154a66 ,
+    view-selection-color: #4d5155,
+    customized-h2: #154a66,
+    header-bg: rgba(0, 0, 0, 0.7),
+    
+)
