--- a/dev/scss/_mixin.scss
+++ b/dev/scss/_mixin.scss
@@ -5,5 +5,17 @@
     color: black;
 }
 
+@mixin flex-column {
+    display: flex;
+    flex-direction: column;
+}
 
+@mixin flex-row {
+    display: flex;
+    flex-direction: row;
+}
 
+@mixin position-transition {
+    position: absolute;
+    transition: all 0.3s ease-in-out;
+}
